# skylab

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  monitor.py  prepare.py  program.md  pyproject.toml  remote_run.sh  schedules.py  train.py
experiments/gpt-pretrain/: experiment.toml  schedules.py  train.py
skylab/: __init__.py  cli.py  config.py  context.py  db.py  orchestrator.py  trial.py
skylab/runner/: base.py  local.py  remote.py
skylab/strategy/: base.py  llm.py  sweep.py
tests/: test_db.py  test_schedules.py
